jlamontSC-test/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Events_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Events_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Backpack</fullName>
                </value>
                <value>
                    <fullName>Base camping</fullName>
                </value>
                <value>
                    <fullName>Biking</fullName>
                </value>
                <value>
                    <fullName>Bus trip</fullName>
                </value>
                <value>
                    <fullName>Canoeing</fullName>
                </value>
                <value>
                    <fullName>Canvassing/Walking area</fullName>
                </value>
                <value>
                    <fullName>Canyoneering</fullName>
                </value>
                <value>
                    <fullName>Car Camping</fullName>
                </value>
                <value>
                    <fullName>Commission/Town hall meeting</fullName>
                </value>
                <value>
                    <fullName>Committee meeting</fullName>
                </value>
                <value>
                    <fullName>Community forum</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Dog sledding</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Fundraiser</fullName>
                </value>
                <value>
                    <fullName>General meeting</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Hike</fullName>
                </value>
                <value>
                    <fullName>Hiking-Canine</fullName>
                </value>
                <value>
                    <fullName>Horseback riding</fullName>
                </value>
                <value>
                    <fullName>Houseparty</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Kayaking</fullName>
                </value>
                <value>
                    <fullName>Leader training</fullName>
                </value>
                <value>
                    <fullName>Letter writing</fullName>
                </value>
                <value>
                    <fullName>Lobbying</fullName>
                </value>
                <value>
                    <fullName>Lodge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excludes_Campaign_Actiontakers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email will not get included in benchmarks if checked.</description>
        <inlineHelpText>Check this box if email audience excluded previous action takers.</inlineHelpText>
        <label>Excludes Campaign Actiontakers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>From Club table Promo</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <label>External URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_Pixel_Code__c</fullName>
        <inlineHelpText>This is for user with Facebook Ads. A Facebook conversion code would go in this field. This is not required.</inlineHelpText>
        <label>Facebook Pixel Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Advocacy_Action_Date__c</fullName>
        <label>First Advocacy Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Form_Giving_Date__c</fullName>
        <label>First Form Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Source_Giving_Date__c</fullName>
        <label>First Source Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fundraising_Campaign__c</fullName>
        <label>Fundraising Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <inlineHelpText>Google Analytics tag (utm_campaign)</inlineHelpText>
        <label>GA Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>addup</fullName>
                </value>
                <value>
                    <fullName>adduplaunch</fullName>
                </value>
                <value>
                    <fullName>addupvanguard</fullName>
                </value>
                <value>
                    <fullName>adoptawildanimal</fullName>
                </value>
                <value>
                    <fullName>beyondcoal</fullName>
                </value>
                <value>
                    <fullName>beyonddirtyfuels</fullName>
                </value>
                <value>
                    <fullName>businesspartnerships</fullName>
                </value>
                <value>
                    <fullName>climateparents</fullName>
                </value>
                <value>
                    <fullName>democracy</fullName>
                </value>
                <value>
                    <fullName>elp</fullName>
                </value>
                <value>
                    <fullName>foodagriculture</fullName>
                </value>
                <value>
                    <fullName>getoutdoors</fullName>
                </value>
                <value>
                    <fullName>giving</fullName>
                </value>
                <value>
                    <fullName>greentransportation</fullName>
                </value>
                <value>
                    <fullName>internationalclimate</fullName>
                </value>
                <value>
                    <fullName>labor</fullName>
                </value>
                <value>
                    <fullName>newsletter</fullName>
                </value>
                <value>
                    <fullName>ourwildamerica</fullName>
                </value>
                <value>
                    <fullName>outings</fullName>
                </value>
                <value>
                    <fullName>peertopeer</fullName>
                </value>
                <value>
                    <fullName>political</fullName>
                </value>
                <value>
                    <fullName>population</fullName>
                </value>
                <value>
                    <fullName>readyfor100</fullName>
                </value>
                <value>
                    <fullName>scblogs</fullName>
                </value>
                <value>
                    <fullName>sierramag</fullName>
                </value>
                <value>
                    <fullName>sierrarise</fullName>
                </value>
                <value>
                    <fullName>sierrastudent</fullName>
                </value>
                <value>
                    <fullName>store</fullName>
                </value>
                <value>
                    <fullName>toxics</fullName>
                </value>
                <value>
                    <fullName>welcomejourney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <inlineHelpText>Google Analytic tag (utm_content)</inlineHelpText>
        <label>GA Content</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <inlineHelpText>Google Analytics tag (utm_medium)</inlineHelpText>
        <label>GA Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>bannerad</fullName>
                </value>
                <value>
                    <fullName>blog</fullName>
                </value>
                <value>
                    <fullName>cpc</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>mobile</fullName>
                </value>
                <value>
                    <fullName>print</fullName>
                </value>
                <value>
                    <fullName>retargeting</fullName>
                </value>
                <value>
                    <fullName>social</fullName>
                </value>
                <value>
                    <fullName>web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <inlineHelpText>Google Analytics tag (utm_source)</inlineHelpText>
        <label>GA Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GA_Medium__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ad</fullName>
                </value>
                <value>
                    <fullName>addup</fullName>
                </value>
                <value>
                    <fullName>bing</fullName>
                </value>
                <value>
                    <fullName>comingclean</fullName>
                </value>
                <value>
                    <fullName>compass</fullName>
                </value>
                <value>
                    <fullName>currents</fullName>
                </value>
                <value>
                    <fullName>dailykos</fullName>
                </value>
                <value>
                    <fullName>dailyray</fullName>
                </value>
                <value>
                    <fullName>directmail</fullName>
                </value>
                <value>
                    <fullName>display</fullName>
                </value>
                <value>
                    <fullName>ecocentroblog</fullName>
                </value>
                <value>
                    <fullName>event</fullName>
                </value>
                <value>
                    <fullName>explorer</fullName>
                </value>
                <value>
                    <fullName>facebook</fullName>
                </value>
                <value>
                    <fullName>google</fullName>
                </value>
                <value>
                    <fullName>google+</fullName>
                </value>
                <value>
                    <fullName>greenlife</fullName>
                </value>
                <value>
                    <fullName>huffpost</fullName>
                </value>
                <value>
                    <fullName>insider</fullName>
                </value>
                <value>
                    <fullName>instagram</fullName>
                </value>
                <value>
                    <fullName>layoftheland</fullName>
                </value>
                <value>
                    <fullName>mediaoutlet</fullName>
                </value>
                <value>
                    <fullName>outdoors</fullName>
                </value>
                <value>
                    <fullName>partner</fullName>
                </value>
                <value>
                    <fullName>powertochange</fullName>
                </value>
                <value>
                    <fullName>pressrelease</fullName>
                </value>
                <value>
                    <fullName>sierra</fullName>
                </value>
                <value>
                    <fullName>sierraclub</fullName>
                </value>
                <value>
                    <fullName>sierrarise</fullName>
                </value>
                <value>
                    <fullName>theplanet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use 553 for all online promotions</inlineHelpText>
        <label>GL Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>GL Department</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (GL Department)</relationshipLabel>
        <relationshipName>Campaigns_GL_Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>GL Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (GL Product)</relationshipLabel>
        <relationshipName>Campaigns_GL_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <description>Location in which tactic occurs.</description>
        <inlineHelpText>Use the &quot;Find Location on Map&quot; link near the bottom of the View page to open a new window with a map where you can find latitude and longitude. You will need to cut and paste this information into the fields.</inlineHelpText>
        <label>Geocode</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Image_Attribution__c</fullName>
        <label>Image Attribution</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Misc in Neobiz</description>
        <inlineHelpText>One letter code. Often A (action), E (event), F (fundraising), H (petition)</inlineHelpText>
        <label>Interaction Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Interaction Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Interaction Type)</relationshipLabel>
        <relationshipName>Campaigns_Interaction_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_One__c</fullName>
        <label>Interest One</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Description</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Three__c</fullName>
        <label>Interest Three</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Description</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Two__c</fullName>
        <label>Interest Two</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Description</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JL_Temp__c</fullName>
        <label>JL Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Advocacy_Action_Date__c</fullName>
        <label>Last Advocacy Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Form_Giving_Date__c</fullName>
        <label>Last Form Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName  &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Timestamp__c</fullName>
        <description>For reportability of Last Modified Date &amp; Time.</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Send_Date__c</fullName>
        <description>Date of most recent non-test send</description>
        <label>Last Send Date</label>
        <summarizedField>Email_Summary_Statistic__c.Send_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Source_Giving_Date__c</fullName>
        <label>Last Source Giving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Strenuous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Cost_Per_1000__c</fullName>
        <label>List Cost Per 1000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Type__c</fullName>
        <inlineHelpText>IN: Inhouse
OUT: Outside</inlineHelpText>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>3-letter code beginning with N</inlineHelpText>
        <label>List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>List</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (List)</relationshipLabel>
        <relationshipName>Campaigns_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Campaign_Global__c</fullName>
        <label>National Sub-Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Campaign_Strategy_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Local_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Grassroots_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use to select entity-specific campaign</inlineHelpText>
        <label>Local/Grassroots Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Local_Grassroots_Campaign__c.Club_Entity_Team__c</field>
                <operation>equals</operation>
                <valueField>$Source.Club_Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Local_Grassroots_Campaign__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Interest_Area_Global__c</fullName>
        <label>Marketing Interest Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Interest_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Tags_Global__c</fullName>
        <label>Marketing Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Account_Type__c</fullName>
        <label>Merchant Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <label>Merchant Account</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Merchant_Account_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ANGELES</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ATLANTIC</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>CUMBERLAND</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA PAC</fullName>
                </value>
                <value>
                    <fullName>GRAND CANYON</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS PAC</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>JOHN MUIR</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>LOMA PRIETA</fullName>
                </value>
                <value>
                    <fullName>LONE STAR</fullName>
                </value>
                <value>
                    <fullName>LOS PADRES</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
                <value>
                    <fullName>MARYLAND PAC</fullName>
                </value>
                <value>
                    <fullName>MASSACHUSETTS</fullName>
                </value>
                <value>
                    <fullName>MICHIGAN</fullName>
                </value>
                <value>
                    <fullName>MICHIGAN PAC</fullName>
                </value>
                <value>
                    <fullName>MISSISSIPPI</fullName>
                </value>
                <value>
                    <fullName>MISSOURI</fullName>
                </value>
                <value>
                    <fullName>NATIONAL</fullName>
                </value>
                <value>
                    <fullName>NEW HAMPSHIRE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign_Global__c</fullName>
        <inlineHelpText>Use for national conservation campaign or program work</inlineHelpText>
        <label>National Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_National_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoShow_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NoShow Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Campaigns__c</fullName>
        <description>Power of One</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One</inlineHelpText>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Email_Jobs__c</fullName>
        <label>Number of Email Jobs</label>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Premiums_Selectable__c</fullName>
        <label>Number of Premiums Selectable</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Cost_Per_1000__c</fullName>
        <label>Package Cost Per 1000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Extension__c</fullName>
        <label>Package Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Mail_Date__c</fullName>
        <label>Planned Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Political_Disclaimer__c</fullName>
        <inlineHelpText>Adds a disclaimer at bottom of public page</inlineHelpText>
        <label>Political Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCIA</fullName>
                </value>
                <value>
                    <fullName>SCPC - Coordinated</fullName>
                </value>
                <value>
                    <fullName>SCPC - Independent</fullName>
                </value>
                <value>
                    <fullName>SCVEF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Answers_1__c</fullName>
        <description>A way to enter possible answers for multiple choice fields like select, checkbox, or radio button fields.</description>
        <inlineHelpText>Use only if this is a select, checkbox, or radio button field. If there are a lot of values -- select would be the recommended type.</inlineHelpText>
        <label>Possible Answers 1</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Answers_2__c</fullName>
        <description>A way to enter possible answers for multiple choice fields like select, checkbox, or radio button fields.</description>
        <inlineHelpText>Use only if this is a select, checkbox, or radio button field. If there are a lot of values -- select would be the recommended type.</inlineHelpText>
        <label>Possible Answers 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Answers_3__c</fullName>
        <description>A way to enter possible answers for multiple choice fields like select, checkbox, or radio button fields.</description>
        <inlineHelpText>Use only if this is a select, checkbox, or radio button field. If there are a lot of values -- select would be the recommended type.</inlineHelpText>
        <label>Possible Answers 3</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Event_Page_Content__c</fullName>
        <inlineHelpText>This content will display to any user that accesses you event page after the event End Time</inlineHelpText>
        <label>Post-Event Page Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Premium_Offered__c</fullName>
        <label>Premium Offered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Single Digit 1-9 corresponding to your program</inlineHelpText>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Program)</relationshipLabel>
        <relationshipName>Campaigns_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Description__c</fullName>
        <inlineHelpText>Internal description</inlineHelpText>
        <label>Internal Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <inlineHelpText>Defaults to date that Status is made Active</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Question_Type_1__c</fullName>
        <description>List of types of form questions for custom fields.</description>
        <inlineHelpText>Pick the type of field you would like to have on the page.</inlineHelpText>
        <label>Question Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Question_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type_2__c</fullName>
        <description>List of types of form questions for custom fields.</description>
        <inlineHelpText>Pick the type of field you would like to have on the page.</inlineHelpText>
        <label>Question Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Question_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type_3__c</fullName>
        <description>List of types of form questions for custom fields.</description>
        <inlineHelpText>Pick the type of field you would like to have on the page.</inlineHelpText>
        <label>Question Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Question_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSVP_Button_Text__c</fullName>
        <defaultValue>&quot;RSVP&quot;</defaultValue>
        <inlineHelpText>Text on button to RSVP for event</inlineHelpText>
        <label>RSVP Button Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>